Moved /collections routes to /programs/<program_name>/<collection_name> routes.
